# calculator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Version.cmake  cmake-format.json  engine.cc  engine.h  init.cc  main.cpp  mingw_w64_cross_build.sh  native_build.sh  register.cc  win32_build.sh  windows_build.sh
.circleci/: config.yml
cmake/: Version.cmake  i686-w64-mingw32.cmake
cmd/calc/: CMakeLists.txt  FindReadLine.cmake  README.md  calc.cc  calc.h  expression_mode.cc  file_mode.cc  non_interactive.cc  shell.cc  shell_mode.cc  utils.cc
compute/: compute.cc  compute.h  history.cc  history.h  stack.h  utils.cc  utils.h
compute/token/: token.cc  token.h
constants/: constants.cc  constants.h  standard.cc
doc/: APIs.md
examples/: CMakeLists.txt
examples/call_c_api/: main.c
examples/simple/: main.cc  simple.cc
examples/version/: version.cc
include/: calculator.h
include/calculator/: calculator.h  version.h
include/calculator/c_api/: c_api.h
include/calculator/compute/: utils.h
include/calculator/constants/: constants.h
include/calculator/engine/: engine.h
include/calculator/operators/: operators.h
include/calculator/operators/functions/: functions.h
operators/: operators.cc  operators.h  registers.h  standard.cc
operators/functions/: abs.cc  functions.cc  functions.h  log.cc  registers.h  sqrt.cc  trig.cc
scripts/: get_cpp_linenoise_and_apply_patch.sh  git_archive.sh  install_gtest.sh  native_build.sh  win32_build.sh
src/c_api/: c_api.cc  c_api.h
src/compute/: compute.cc  stack.h  utils.cc  utils.h
src/compute/token/: token.cc  token.h
src/constants/: constants.cc  constants.h  standard.cc
src/engine/: engine.cc  engine.h  history.cc  register.cc
src/operators/: operators.cc  operators.h  standard.cc
src/operators/functions/: abs.cc  functions.cc  functions.h  log.cc  sqrt.cc  trig.cc
tests/: CMakeLists.txt  calculator_tests.cc
