IF (BUILD_TESTING)
	ENABLE_TESTING()
	FIND_PACKAGE(GTest REQUIRED)
	FIND_PACKAGE(Threads REQUIRED)
	INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
	ADD_EXECUTABLE(calculator_tests calculator_tests.cc)
	TARGET_LINK_LIBRARIES(calculator_tests calculator ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
	ADD_TEST(NAME CALCULATOR_TESTS COMMAND calculator_tests)
ENDIF ()